Revision history for JSON-Schema-Modern

{{$NEXT}}
          - now performing stricter email address validation for the 'email' and
            'idn-email' formats

0.606     2025-03-23 00:16:35Z
          - bump required version for optional module Data::Validate::Domain
            (used by the 'hostname' and 'idn-hostname' formats)

0.605     2025-03-09 16:31:05Z
          - update 'hostname' and 'idn-hostname' format validation to be more
            lax with respect to domain names; fixes some acceptance tests

0.604     2025-03-08 23:23:05Z
          - mark some failing format tests as todo that will be added in
            Test::JSON::Schema::Acceptance 1.028

0.603     2025-02-28 23:35:43Z
          - fix Sereal serialization hooks
          - various performance improvements when dealing with base URIs

0.602     2025-02-21 00:11:32Z
          - more checks at traverse and evaluation time for inconsistent
            results
          - fix Sereal deserialization hooks

0.601     2025-02-02 00:23:38Z
          - check for builtin::Backport at install time

0.600     2025-01-31 23:23:21Z
          BREAKING CHANGES: OpenAPI::Modern must be updated to 0.079 after
          installing this version.
          - the specification version can now be overridden when constructing
            Documents directly (rather than via the evaluator), if not
            specified by the "$schema" keyword
          - some fixes for $id handling in earlier drafts
          - rework of document management and URI resolution:
            $jsm->add_schema($uri, $schema) no longer sets the $uri in the
            document object, allowing the document to be added to the index
            under multiple URIs. Instead, we resolve the document's indexed
            resources against the base URI and only store the resolved form in
            the evaluator itself. This allows the same document to be reused
            with different base URIs if it only contains relative $ids