@@ -3,6 +3,10 @@ Revision history for JSON-Schema-Modern
 {{$NEXT}}
           - now performing stricter email address validation for the 'email' and
             'idn-email' formats
+          - some improvements to the handling of unimplemented formats (only
+            missing core formats are checked for at traverse time; custom
+            formats can be added at any time and errors can be avoided with
+            'short-circuit')
 
 0.606     2025-03-23 00:16:35Z
           - bump required version for optional module Data::Validate::Domain
